Sticky session support as a comment

--- a/docker/nginx/conf/upstream-server-and-load-balancing.conf
+++ b/docker/nginx/conf/upstream-server-and-load-balancing.conf
@@ -3,4 +3,5 @@ upstream server {
   # server is included in each dynamic /etc/hosts by Docker
   server server:3000;
   # Load balancing could be done here, if required.
+  # Add sticky session support with: ip_hash;
 }
