--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -4,8 +4,8 @@ MAINTAINER Pierre-Eric Marchandet <pemarchandet@gmail.com>
 
 # Add NGinx official repository
 RUN apt-key adv --keyserver pgp.mit.edu --recv-keys 573BFD6B3D8FBC641079A6ABABF5BD827BD9BF62
-RUN echo "deb http://nginx.org/packages/mainline/debian/ wheezy nginx" >> /etc/apt/sources.list
-ENV NGINX_VERSION 1.9.4-1~wheezy
+RUN echo "deb http://nginx.org/packages/debian/ wheezy nginx" >> /etc/apt/sources.list
+ENV NGINX_VERSION 1.8.0-1~wheezy
 
 # Update system
 ENV DEBIAN_FRONTEND noninteractive
